fixed back class overlapping

--- a/scss/modules/auto-complete-list.scss
+++ b/scss/modules/auto-complete-list.scss
@@ -32,10 +32,6 @@
     .tt-suggestions {
         width: 100%;
     }
-
-    .back {
-        background: transparent;
-    }
 }
 
 .auto-complete-list {
